shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmApiReadResponseException.kt
package com.example.osmapi.core.common.errors

class OsmApiReadResponseException(e:Exception) : RuntimeException(e) {
}